fixed up column overlap

--- a/assets/less/event.less
+++ b/assets/less/event.less
@@ -44,7 +44,6 @@
 	.sfhiv_event .event_date_time{
 		.date,.time{
 			float:left;
-			width:@block_width/2 - @space_size*2;
 		}
 	}
 }
